--- a/app/src/main/res/layout/rv_template_team_recent.xml
+++ b/app/src/main/res/layout/rv_template_team_recent.xml
@@ -11,6 +11,7 @@
         android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="To be set programtically"
         android:maxHeight="@dimen/logo_max_height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:gravity="start"
@@ -38,7 +39,7 @@
         android:id="@+id/tv_team_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/tv_placeholder_team_name"
         android:textColor="@color/color_team_name"
@@ -46,14 +47,15 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_player_name" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_offense_color"
         android:layout_width="15dp"
         android:layout_height="19dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:background="@android:color/holo_green_dark"
+        android:contentDescription="To be set programatically"
         app:layout_constraintStart_toEndOf="@+id/iv_team_logo"
-        app:layout_constraintTop_toBottomOf="@+id/tv_team_name"
-        app:srcCompat="@android:color/holo_green_dark" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
 
     <TextView
         android:id="@+id/tv_offense_type"
@@ -65,7 +67,7 @@
         android:text="TextView"
         android:textColor="@color/color_team_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/iv_offense_color"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
 
     <TextView
