--- a/app/src/main/res/layout/rv_template_team_recent.xml
+++ b/app/src/main/res/layout/rv_template_team_recent.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="16dp"
+    android:paddingEnd="8dp"
+    android:paddingStart="8dp"
+    android:paddingTop="16dp">
 
     <ImageView
         android:id="@+id/iv_team_logo"
         android:layout_width="80dp"
         android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:contentDescription="To be set programtically"
         android:maxHeight="@dimen/logo_max_height"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,9 +23,7 @@
         android:id="@+id/tv_player_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:gravity="start"
         android:lines="1"
@@ -61,12 +61,10 @@
         android:id="@+id/tv_offense_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
         android:textColor="@color/color_team_name"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_offense_color"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
 
@@ -79,4 +77,15 @@
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/tv_offense_type"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
+
+    <TextView
+        android:id="@+id/tv_offense_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_offense_type" />
 </android.support.constraint.ConstraintLayout>
