feat: Updated TeamRecents to be the appropriate display from the design. Kept old TeamRecents layout for the Sourced Offenses display.

--- a/app/src/main/res/values/position_ids.xml
+++ b/app/src/main/res/values/position_ids.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string-array name="position_id_array">
+        <item>WR</item>
+        <item>LB</item>
+        <item>CB</item>
+        <item>RB</item>
+        <item>DT</item>
+        <item>S</item>
+        <item>DE</item>
+        <item>OT</item>
+        <item>TE</item>
+        <item>OG</item>
+        <item>QB</item>
+        <item>FB</item>
+        <item>K</item>
+        <item>C</item>
+        <item>DB</item>
+        <item>P</item>
+        <item>DL</item>
+        <item>OL</item>
+        <item>DE\/DT</item>
+    </string-array>
 </resources>
