--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <bool name="show_vertical_dividers">false</bool>
     <bool name="is_portrait">true</bool>
     <integer name="num_team_recents_grid">1</integer>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
