--- a/app/src/main/res/layout-w600dp/rv_template_sourced_offenses.xml
+++ b/app/src/main/res/layout-w600dp/rv_template_sourced_offenses.xml
@@ -50,11 +50,11 @@
         android:id="@+id/iv_offense_color"
         android:layout_width="15dp"
         android:layout_height="19dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:background="@android:color/holo_green_dark"
         android:contentDescription="To be set programatically"
-        app:layout_constraintStart_toEndOf="@+id/iv_team_logo"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
 
     <TextView
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textColor="@color/color_team_name"
         app:layout_constraintStart_toEndOf="@+id/iv_offense_color"
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/tv_offense_type"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
