feat: Minor layout and package structure tweaks

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
     <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.MainActivity"
-        android:fitsSystemWindows="true">
+        tools:context=".ui.activities.MainActivity">
+
+        <include layout="@layout/content_main" />
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -54,7 +55,6 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_main" />
 
     </android.support.design.widget.CoordinatorLayout>
 
