feat: Fix widget data update and add "No Data" defaults to displays

--- a/app/src/main/res/layout/fragment_crime_recents.xml
+++ b/app/src/main/res/layout/fragment_crime_recents.xml
@@ -5,7 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.CrimeRecentsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:text="@string/default_no_data_display" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_crime_recents"
