--- a/app/src/main/res/layout/rv_template_team_recents.xml
+++ b/app/src/main/res/layout/rv_template_team_recents.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/color_header_nav_text"
     android:paddingBottom="16dp"
     android:paddingEnd="8dp"
     android:paddingStart="8dp"
