--- a/app/src/main/res/layout/nflcrimewatch_widget.xml
+++ b/app/src/main/res/layout/nflcrimewatch_widget.xml
@@ -1,18 +1,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_widget"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="#09C"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="@dimen/widget_margin">
 
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_header_nav_text">
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/widget_logo"
+        android:layout_marginStart="93dp"
+        android:background="@color/color_header_nav_text"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-    </FrameLayout>
+        <TextView
+            android:id="@+id/widget_player"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/widget_crime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Drugs/Gun" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/widget_logo"
@@ -20,36 +36,6 @@
         android:layout_height="75dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:srcCompat="@drawable/ic_nfl" />
-
-    <TextView
-        android:id="@+id/widget_headline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/widget_logo"
-        android:layout_marginStart="91dp"
-        android:text="@string/widget_title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-    <TextView
-        android:id="@+id/widget_player"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/widget_headline"
-        android:layout_below="@+id/widget_headline"
-        android:layout_marginTop="8dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/widget_crime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/widget_player"
-        android:layout_below="@+id/widget_player"
-        android:layout_marginTop="8dp"
-        android:text="TextView" />
 
 </RelativeLayout>
