--- a/app/src/main/res/layout-w600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_main.xml
@@ -36,6 +36,7 @@
 
                     <ImageView
                         android:id="@+id/iv_nfl_logo"
+                        android:contentDescription="@string/nfl_logo_label"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fitsSystemWindows="true"
