--- a/app/src/main/res/layout-land/rv_template_sourced_offenses.xml
+++ b/app/src/main/res/layout-land/rv_template_sourced_offenses.xml
@@ -13,7 +13,7 @@
         android:id="@+id/iv_team_logo"
         android:layout_width="80dp"
         android:layout_height="60dp"
-        android:contentDescription="To be set programtically"
+        tools:contentDescription="To be set programtically"
         android:maxHeight="@dimen/logo_max_height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +53,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@android:color/holo_green_dark"
-        android:contentDescription="To be set programatically"
+        tools:contentDescription="To be set programatically"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
 
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        tools:text="TextView"
         android:textColor="@color/color_team_name"
         app:layout_constraintStart_toEndOf="@+id/iv_offense_color"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        tools:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/tv_offense_type"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
 
@@ -85,7 +85,7 @@
         android:layout_marginTop="8dp"
         android:paddingEnd="4dp"
         android:paddingStart="4dp"
-        android:text="TextView"
+        tools:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_offense_type" />
 </android.support.constraint.ConstraintLayout>
