--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cl_activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activities.MainActivity">
@@ -14,6 +15,7 @@
         <include layout="@layout/content_main" />
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/ab_appbar_main_activity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay"
@@ -31,6 +33,7 @@
                 app:titleEnabled="true">
 
                 <FrameLayout
+                    android:id="@+id/fl_logo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_collapseMode="parallax">
