--- a/app/src/main/res/layout/nflcrimewatch_widget.xml
+++ b/app/src/main/res/layout/nflcrimewatch_widget.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,14 +21,14 @@
             android:id="@+id/widget_player"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            tools:text="TextView" />
 
         <TextView
             android:id="@+id/widget_crime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Drugs/Gun" />
+            tools:text="Drugs/Gun" />
     </LinearLayout>
 
     <ImageView
@@ -36,6 +37,7 @@
         android:layout_height="75dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:contentDescription="@string/logo_label"
         app:srcCompat="@drawable/ic_nfl" />
 
 </RelativeLayout>
