--- a/app/src/main/res/layout/rv_template_team_recents.xml
+++ b/app/src/main/res/layout/rv_template_team_recents.xml
@@ -14,7 +14,7 @@
         android:id="@+id/iv_team_logo"
         android:layout_width="80dp"
         android:layout_height="60dp"
-        android:contentDescription="To be set programtically"
+        tools:contentDescription="To be set programtically"
         android:maxHeight="@dimen/logo_max_height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,7 +28,7 @@
         android:ellipsize="end"
         android:gravity="start"
         android:lines="1"
-        android:text="Team Name Display Space"
+        tools:text="Team Name Display Space"
         android:textAllCaps="true"
         android:textColor="@color/color_player_name"
         android:textSize="18sp"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="Player Name Display Space"
+        tools:text="Player Name Display Space"
         android:textColor="@color/color_team_name"
         app:layout_constraintStart_toEndOf="@+id/iv_team_logo"
         app:layout_constraintTop_toBottomOf="@+id/tv_div_conf" />
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Offense Date"
+        tools:text="Offense Date"
         app:layout_constraintStart_toEndOf="@+id/tv_player_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_div_conf" />
 
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="2dp"
-        android:text="TextView"
+        tools:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/iv_team_logo"
         app:layout_constraintTop_toBottomOf="@+id/tv_team_name" />
 
